feat: seperate resetPassword into two route
